<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/Azul_zodiaco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnVolverAgregarAlumno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_volver"
                android:backgroundTint="@color/purple_500"
                android:textColor="@color/white"
                android:fontFamily="@font/baloo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.837" />

            <TextView
                android:id="@+id/tituloAlumno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/baloo"
                android:text="Agregar Alumno(a)"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

        </FrameLayout>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:id="@+id/logo_alumno"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/alumno" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/boxNombreAlumno"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:ems="10"
                android:hint="@string/hint_nombre"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edad"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginLeft="15dp"/>

            <EditText
                android:id="@+id/boxEdadAlumno"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:ems="10"
                android:hint="@string/hint_edad"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textSize="10sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apellidos"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/boxApellidoAlumno"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:ems="10"
                android:hint="@string/hint_apellidos"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edadmental"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginLeft="15dp" />

            <EditText
                android:id="@+id/boxEdadMentalAlumno"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:ems="10"
                android:hint="@string/hint_edadmental"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textSize="10sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sexo"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <Spinner
                android:id="@+id/select_sexo"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:hint="Sexo" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comentarios"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/boxComentariosAlumnos"
                android:layout_width="176dp"
                android:layout_height="40dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/hint_comentarios"
                android:inputType="textMultiLine"
                android:textColor="@color/black"
                android:textSize="10sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnGuardarAgregarAlumno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/purple_500"
            android:text="@string/btn_guardar"
            android:textColor="@color/white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
